# mkdocs-llms-source

./: .gitignore  LICENSE  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  publish.yml
agent-docs/: progress.md  todo.md
docs/: blog-post.md  configuration.md  development.md  for-ai-agents.md  index.md  quickstart.md  setup-from-scratch.md
src/mkdocs_llms_source/: __init__.py  plugin.py
src/mkdocs_llmstxt/: __init__.py  plugin.py
tests/: conftest.py  test_plugin.py
tests/fixtures/basic-site/: mkdocs.yml
tests/fixtures/basic-site/docs/: guide.md  index.md
