[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-llms-source"
dynamic = ["version"]
description = "MkDocs plugin to generate /llms.txt files for LLM-friendly documentation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tim Child" },
]
keywords = ["mkdocs", "llms", "llmstxt", "documentation", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mkdocs>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mkdocs-material>=9.0",
]

[project.entry-points."mkdocs.plugins"]
llms-source = "mkdocs_llms_source.plugin:LlmsTxtPlugin"

[project.urls]
Homepage = "https://github.com/TimChild/mkdocs-llms-source"
Documentation = "https://github.com/TimChild/mkdocs-llms-source"
Repository = "https://github.com/TimChild/mkdocs-llms-source"
Issues = "https://github.com/TimChild/mkdocs-llms-source/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mkdocs_llms_source/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocs_llms_source"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
